# Flask_test

./: .breakpoints  app.db  app.py  app_tpp.py  config.py  create_db.py  forms.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  sql.py  tpp.db
static/css/: main.css
templates/: 404.html  add_process.html  base.html  choice_process.html  choice_product.html  choice_types_tpp.html  config_page.html  config_tpp.html  config_update.html  config_user.html  index.html  list_tpp.html  login.html  master.html  md.html  page404.html  pdf_template.html  process.html  process_report.html  report.html  report_f.html  report_resume.html  update.html
templates/config_folder/: add_equipment.html  add_materials.html  add_process.html  add_tool.html  add_uph.html  config_tpp.html  config_user.html  update.html  update_uph.html  uph.html
templates/form_for_tpp/: form.html
templates/process/: form.html
