[tool.poetry]
name = "repl_python3_Flasktest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
app = "^0.0.1"
Flask-SQLAlchemy = "^2.5.1"
pdfkit = "^0.6.1"
WTForms = "^2.3.3"
Flask-WTF = "^0.15.1"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
