[tool.poetry]
name = "repl_python3_Flasktest"
version = "0.1.0"
description = ""
authors = ["artemartem4 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
WTForms = "^3.0.0"
Flask = "^2.0.2"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.0"
Werkzeug = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
